# Bermuda-Bozok

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  config.py  main.py  model_clothing.joblib  model_features.joblib  model_metadata.json  model_umbrella.joblib  package-lock.json  package.json  pyproject.toml  requirements.txt  schemas.py  services.py  tatus  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.postman/: resources.yaml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActivityPanel.tsx  AiCommentTop.tsx  AlertBanner.tsx  DailyForecast.tsx  HeroTemperature.tsx  HeroWeatherArt.tsx  HourlyForecast.tsx  OutfitPlanCard.tsx  SketchySun.tsx  WeatherHighlights.tsx  WeatherIcon.tsx
frontend/src/lib/: api.ts  weather.ts
models/: label_encoder_clothing.joblib
postman/collections/WeatherWise API/.resources/: definition.yaml
postman/collections/WeatherWise API/00 System/: Health Check.request.yaml
postman/collections/WeatherWise API/01 Core Recommendation/: Generate Smart Recommendation.request.yaml
postman/collections/WeatherWise API/02 Planning/: Plan Best Time Window.request.yaml
postman/collections/WeatherWise API/03 Activities/: Review Outdoor Activities.request.yaml
postman/collections/WeatherWise API/04 Validation and Errors/: Invalid City Validation.request.yaml
postman/environments/: Local.environment.yaml
postman/globals/: workspace.globals.yaml
src/weatherwise/: __init__.py  config.py  main.py  schemas.py  services.py  train.py
tests/: conftest.py  test_main.py
