[project]
name = "weatherwise"
version = "1.1.0"
description = "WeatherWise transforms live weather into short, human-friendly recommendations and planning signals."
requires-python = ">=3.11,<3.15"
dependencies = [
    "cachetools~=5.5",
    "fastapi~=0.115",
    "joblib~=1.4",
    "pandas~=2.2",
    "pydantic~=2.10",
    "python-dotenv~=1.1",
    "requests~=2.32",
    "scikit-learn~=1.6",
    "uvicorn~=0.34",
    "xgboost~=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "httpx~=0.28",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
