[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherwise"
version = "1.1.0"
description = "WeatherWise transforms live weather into short, human-friendly recommendations and planning signals."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bermuda Bozok Team" },
]
keywords = ["weather", "recommendation", "fastapi", "ml", "hackathon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "cachetools~=5.5",
    "fastapi~=0.115",
    "joblib~=1.4",
    "pandas~=2.2",
    "pydantic~=2.10",
    "python-dotenv~=1.1",
    "requests~=2.32",
    "scikit-learn~=1.6",
    "uvicorn~=0.34",
    "xgboost~=2.1",
]

[project.urls]
Homepage = "https://github.com/Bermuda-Bozok/WeatherWise"
Source = "https://github.com/Bermuda-Bozok/WeatherWise"
Tracker = "https://github.com/Bermuda-Bozok/WeatherWise/issues"

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "httpx~=0.28",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["weatherwise"]
omit = ["*/tests/*", "*/train.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
